--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "Server side of Checkers web application",
   "main": "app.js",
   "engines": {
-    "node": "12.16.2",
-    "npm": "6.14.5"
+    "node": "12.18.0",
+    "npm": "6.14.4",
+    "yarn": "1.22.4"
   },
   "scripts": {
     "start": "node app.js",
     "server": "nodemon app.js",
-    "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "client": "yarn --cwd client start",
+    "dev": "concurrently \"yarn server\" \"yarn client\"",
+    "build": "yarn --cwd client install && yarn --cwd client build",
+    "heroku-postbuild": "yarn build"
   },
   "author": "Zalman Kelber",
   "license": "ISC",
